// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routed sidebar variants — real-TTY visual matrix > agents at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ⧉ AGENTS
                                                             ─ 3 1 1        ─
                                                             ▎ ! HOTTEST·····
                                                             refactor-plan…
                                                             ctx 82% ◆ typec…
                                                             █████████████░░░
                                                             ▎ ◈ RUNNING··⟦3⟧
                                                             ▶ Leader Agent
                                                               browser_sna…
                                                             ▶ security-scan…
                                                               codebase-se…
                                                             ▶ refactor-plan…
                                                               typecheck
                                                             ╰──────────────╯

                                                             ◆ F3 details ◆ …














                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > agents at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ⧉ AGENTS   ⟦3 ✓1 !1⟧ │
                                                                                           │ live ops               │
                                                                                           │ ▎ ! HOTTEST··········· │
                                                                                           │ refactor-planner-wi…   │
                                                                                           │ ctx 82% ◆ typecheck    │
                                                                                           │ ██████████████████░░░░ │
                                                                                           │ ▎ ◈ RUNNING········⟦3⟧ │
                                                                                           │ ▶ Leader Agent   6m12s │
                                                                                           │   browser_snapsh…  71% │
                                                                                           │ ▶ security-scan… 6m12s │
                                                                                           │   codebase-search  48% │
                                                                                           │ ▶ refactor-plan… 6m12s │
                                                                                           │   typecheck        82% │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F3 details ◆ $12.3456














                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > agents at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ⧉ AGENTS             ⟦3 ✓1 !1⟧ │
                                                                                                                         │ live ops                         │
                                                                                                                         │ ▎ ! HOTTEST····················· │
                                                                                                                         │ refactor-planner-with-a-very-…   │
                                                                                                                         │ ctx 82% ◆ typecheck              │
                                                                                                                         │ ██████████████████████████░░░░░░ │
                                                                                                                         │ ▎ ◈ RUNNING··················⟦3⟧ │
                                                                                                                         │ ▶ Leader Agent             6m12s │
                                                                                                                         │   browser_snapshot           71% │
                                                                                                                         │ ▶ security-scanner-東京    6m12s │
                                                                                                                         │   codebase-search            48% │
                                                                                                                         │ ▶ refactor-planner-with-a… 6m12s │
                                                                                                                         │   typecheck                  82% │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F3 details ◆ $12.3456














                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > connections at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ⚙ CONNECTIONS
                                                             ─ 1 DOWN       ─
                                                             ▎ ⚙ SIGNAL
                                                             MATRIX

                                                             ✓3 !1 ×1

                                                             ██████████░░░░░░
                                                             ✓━━Chronicle du…
                                                             ✓━━Codebase Ind…
                                                             !┅┅SAGE Memory …
                                                             ✓━━Kanban IPC h…
                                                             ×··Mailbox IPC …
                                                             ╰──────────────╯
















                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > connections at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ⚙ CONNECTIO…⟦1 DOWN⟧ │
                                                                                           │ signal matrix          │
                                                                                           │ ▎ ⚙ SIGNAL MATRIX⟦3/5⟧ │
                                                                                           │                        │
                                                                                           │ ✓3 !1 ×1               │
                                                                                           │                        │
                                                                                           │ █████████████░░░░░░░░░ │
                                                                                           │ ✓━━Chronicle dur… 12ms │
                                                                                           │ ✓━━Codebase Inde… 47ms │
                                                                                           │ !┅┅SAGE Memor… 10000ms │
                                                                                           │ ✓━━Kanban IPC hea… 8ms │
                                                                                           │ ×··Mailbox IPC cross-… │
                                                                                           ╰────────────────────────╯

















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > connections at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ⚙ CONNECTIONS         ⟦1 DOWN⟧ │
                                                                                                                         │ signal matrix                    │
                                                                                                                         │ ▎ ⚙ SIGNAL MATRIX··········⟦3/5⟧ │
                                                                                                                         │                                  │
                                                                                                                         │ ✓3 !1 ×1                         │
                                                                                                                         │                                  │
                                                                                                                         │ ███████████████████░░░░░░░░░░░░░ │
                                                                                                                         │ ✓━━Chronicle durable histo… 12ms │
                                                                                                                         │ ✓━━Codebase Index 日本語    47ms │
                                                                                                                         │ !┅┅SAGE Memory Injector  10000ms │
                                                                                                                         │ ✓━━Kanban IPC heartbeat      8ms │
                                                                                                                         │ ×··Mailbox IPC cross-session     │
                                                                                                                         ╰──────────────────────────────────╯

















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > coordinator at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◴ COORDINATOR
                                                             ─ 3 active     ─
                                                             ▎ ☷ PHASES⟦4/3⟧

                                                             ████████████████
                                                             ✓ Generate
                                                             real-TTY
                                                             snapshot matrix
                                                             ✓ Inspect long
                                                             Unicode
                                                             presentation
                                                             ✓ Run typecheck
                                                             and focused
                                                             regressions
                                                             ╰──────────────╯

                                                             ◆ F11 details ◆…













                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > coordinator at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◴ COORDIN…⟦3 active⟧ │
                                                                                           │ phases                 │
                                                                                           │ ▎ ☷ PHASES······⟦4/3⟧ │
                                                                                           │                        │
                                                                                           │ ██████████████████████ │
                                                                                           │ ✓ Generate real-TTY    │
                                                                                           │ snapshot matrix        │
                                                                                           │ ✓ Inspect long Unicode │
                                                                                           │  presentation          │
                                                                                           │ ✓ Run typecheck and    │
                                                                                           │ focused regressions    │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F11 details ◆ 62m03s
















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > coordinator at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◴ COORDINATOR       ⟦3 active⟧ │
                                                                                                                         │ phases                           │
                                                                                                                         │ ▎ ☷ PHASES················⟦4/3⟧ │
                                                                                                                         │                                  │
                                                                                                                         │ ████████████████████████████████ │
                                                                                                                         │ ✓ Generate real-TTY snapshot     │
                                                                                                                         │ matrix                           │
                                                                                                                         │ ✓ Inspect long Unicode           │
                                                                                                                         │ presentation                     │
                                                                                                                         │ ✓ Run typecheck and focused      │
                                                                                                                         │ regressions                      │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F11 details ◆ 62m03s
















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > fleet at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◈ AGENT SWARM
                                                             ─ 3 LIVE       ─

                                                             ▶3 ✓1 ×1
                                                             ▶ Leader Agent
                                                               browser_sna…
                                                             ▶ security-scan…
                                                               codebase-se…
                                                             ▶ refactor-plan…
                                                               typecheck
                                                             ╰──────────────╯



















                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > fleet at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◈ AGENT SWA…⟦3 LIVE⟧ │
                                                                                           │ fleet                  │
                                                                                           │                        │
                                                                                           │ ▶3 ✓1 ×1               │
                                                                                           │ ▶ Leader Agent   6m12s │
                                                                                           │   browser_snapsh…  71% │
                                                                                           │ ▶ security-sca…  6m12s │
                                                                                           │   codebase-search  48% │
                                                                                           │ ▶ refactor-pla…  6m12s │
                                                                                           │   typecheck        82% │
                                                                                           ╰────────────────────────╯



















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > fleet at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◈ AGENT SWARM         ⟦3 LIVE⟧ │
                                                                                                                         │ fleet                            │
                                                                                                                         │                                  │
                                                                                                                         │ ▶3 ✓1 ×1                         │
                                                                                                                         │ ▶ Leader Agent             6m12s │
                                                                                                                         │   browser_snapshot           71% │
                                                                                                                         │ ▶ security-scanner-東京    6m12s │
                                                                                                                         │   codebase-search            48% │
                                                                                                                         │ ▶ refactor-planner-with-…  6m12s │
                                                                                                                         │   typecheck                  82% │
                                                                                                                         ╰──────────────────────────────────╯



















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > goal at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◎ GOAL
                                                             ─ ▶ ACTIVE     ─
                                                             ▎ ◎ MISSION·····
                                                             Ship a dense,…
                                                             ▎▶ state··ACTIVE
                                                             ▎ ✓ PROGRESS 63%

                                                             ██████████░░░░░░
                                                             ▎ ◆ DELIVERABLES
                                                             ✓ Preserve
                                                             sixteen content
                                                             columns
                                                             ○ Render all
                                                             thirteen routed
                                                             variants at
                                                             three widths
                                                             ○ Inspect
                                                             한국어, 日本語,
                                                             and emoji
                                                             telemetry
                                                             ○ Verify the
                                                             final matrix
                                                             with production
                                                             typechecks
                                                             ╰──────────────╯

                                                             ◆ F9 details



                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > goal at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◎ GOAL    ⟦▶ ACTIVE⟧ │
                                                                                           │ mission control        │
                                                                                           │ ▎ ◎ MISSION··········· │
                                                                                           │ Ship a dense, legib…   │
                                                                                           │ ▎▶ state·······ACTIVE  │
                                                                                           │ ▎ ✓ PROGRESS·····⟦63%⟧ │
                                                                                           │                        │
                                                                                           │ ██████████████░░░░░░░░ │
                                                                                           │ ▎ ◆ DELIVERABLES·⟦1/4⟧ │
                                                                                           │ ✓ Preserve sixteen     │
                                                                                           │ content columns        │
                                                                                           │ ○ Render all thirteen  │
                                                                                           │ routed variants at     │
                                                                                           │ three widths           │
                                                                                           │ ○ Inspect 한국어,      │
                                                                                           │ 日本語, and emoji      │
                                                                                           │ telemetry              │
                                                                                           │ ○ Verify the final     │
                                                                                           │ matrix with production │
                                                                                           │  typechecks            │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F9 details







                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > goal at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◎ GOAL              ⟦▶ ACTIVE⟧ │
                                                                                                                         │ mission control                  │
                                                                                                                         │ ▎ ◎ MISSION····················· │
                                                                                                                         │ Ship a dense, legible, show-l…   │
                                                                                                                         │ ▎▶ state·················ACTIVE  │
                                                                                                                         │ ▎ ✓ PROGRESS···············⟦63%⟧ │
                                                                                                                         │                                  │
                                                                                                                         │ ████████████████████░░░░░░░░░░░░ │
                                                                                                                         │ ▎ ◆ DELIVERABLES···········⟦1/4⟧ │
                                                                                                                         │ ✓ Preserve sixteen content       │
                                                                                                                         │ columns                          │
                                                                                                                         │ ○ Render all thirteen routed     │
                                                                                                                         │ variants at three widths         │
                                                                                                                         │ ○ Inspect 한국어, 日本語, and    │
                                                                                                                         │ emoji telemetry                  │
                                                                                                                         │ ○ Verify the final matrix with   │
                                                                                                                         │ production typechecks            │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F9 details










                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > kanban at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◆ KANBAN
                                                             ─ ✓0 24        ─
                                                             ▎ ◈ COLUMNS·····
                                                             Backlog       14
                                                             Todo / …       5
                                                             Running…       3
                                                             Review         2
                                                             Done         128
                                                             ▎ ▶ ACTIVE······
                                                             ○ Generate all
                                                             thirty-nine
                                                             routed sidebar
                                                             snapshots
                                                             ! 2. Inspect the
                                                              connection
                                                             signal matrix at
                                                              sixteen columns
                                                             ! 3. Verify
                                                             Unicode
                                                             telemetry 한국어
                                                              日本語 🛰
                                                             ! 4. Run both
                                                             TypeScript
                                                             projects and
                                                             Biome
                                                             ╰──────────────╯

                                                             ◆ F12 details


                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > kanban at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◆ KANBAN ⟦24 active⟧ │
                                                                                           │ board                  │
                                                                                           │ ▎ ◈ COLUMNS··········· │
                                                                                           │ Backlog             14 │
                                                                                           │ Todo / Ready         5 │
                                                                                           │ Running 日本語       3 │
                                                                                           │ Review               2 │
                                                                                           │ Done               128 │
                                                                                           │ ▎ ▶ ACTIVE············ │
                                                                                           │ ○ Generate all         │
                                                                                           │ thirty-nine routed     │
                                                                                           │ sidebar snapshots      │
                                                                                           │ ! 2. Inspect the       │
                                                                                           │ connection signal      │
                                                                                           │ matrix at sixteen      │
                                                                                           │ columns                │
                                                                                           │ ! 3. Verify Unicode    │
                                                                                           │ telemetry 한국어       │
                                                                                           │ 日本語 🛰               │
                                                                                           │ ! 4. Run both          │
                                                                                           │ TypeScript projects    │
                                                                                           │ and Biome              │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F12 details





                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > kanban at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◆ KANBAN           ⟦24 active⟧ │
                                                                                                                         │ board                            │
                                                                                                                         │ ▎ ◈ COLUMNS····················· │
                                                                                                                         │ Backlog                       14 │
                                                                                                                         │ Todo / Ready                   5 │
                                                                                                                         │ Running 日本語                 3 │
                                                                                                                         │ Review                         2 │
                                                                                                                         │ Done                         128 │
                                                                                                                         │ ▎ ▶ ACTIVE······················ │
                                                                                                                         │ ○ Generate all thirty-nine       │
                                                                                                                         │ routed sidebar snapshots         │
                                                                                                                         │ ! 2. Inspect the connection      │
                                                                                                                         │ signal matrix at sixteen columns │
                                                                                                                         │ ! 3. Verify Unicode telemetry    │
                                                                                                                         │ 한국어 日本語 🛰                  │
                                                                                                                         │ ! 4. Run both TypeScript         │
                                                                                                                         │ projects and Biome               │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F12 details










                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > plan at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ☷ PLAN
                                                             ─ ◐1 ✓1 4      ─
                                                             ▎ ☷ PROGRESS···

                                                             ████░░░░░░░░░░░░
                                                             ▎ ◆ STEPS··⟦1/4⟧
                                                             ◐ Generate all
                                                             thirty-nine
                                                             routed sidebar
                                                             snapshots
                                                             ○ Inspect long
                                                             Unicode
                                                             telemetry
                                                             without losing
                                                             identity
                                                             ○ Keep every row
                                                              inside the
                                                             sixteen-column
                                                             floor
                                                             ✓ Preserve
                                                             RightSidebar
                                                             clipping
                                                             ownership
                                                             ╰──────────────╯

                                                             ◆ F5 details




                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > plan at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ☷ PLAN        ⟦25%⟧ │
                                                                                           │ Real-TTY sidebar pr…   │
                                                                                           │ ▎ ☷ PROGRESS····⟦25%⟧ │
                                                                                           │                        │
                                                                                           │ ██████░░░░░░░░░░░░░░░░ │
                                                                                           │ ▎ ◆ STEPS········⟦1/4⟧ │
                                                                                           │ ◐ Generate all         │
                                                                                           │ thirty-nine routed     │
                                                                                           │ sidebar snapshots      │
                                                                                           │ ○ Inspect long Unicode │
                                                                                           │  telemetry without     │
                                                                                           │ losing identity        │
                                                                                           │ ○ Keep every row       │
                                                                                           │ inside the             │
                                                                                           │ sixteen-column floor   │
                                                                                           │ ✓ Preserve             │
                                                                                           │ RightSidebar clipping  │
                                                                                           │ ownership              │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F5 details









                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > plan at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ☷ PLAN                  ⟦25%⟧ │
                                                                                                                         │ Real-TTY sidebar pr…             │
                                                                                                                         │ ▎ ☷ PROGRESS··············⟦25%⟧ │
                                                                                                                         │                                  │
                                                                                                                         │ ████████░░░░░░░░░░░░░░░░░░░░░░░░ │
                                                                                                                         │ ▎ ◆ STEPS··················⟦1/4⟧ │
                                                                                                                         │ ◐ Generate all thirty-nine       │
                                                                                                                         │ routed sidebar snapshots         │
                                                                                                                         │ ○ Inspect long Unicode telemetry │
                                                                                                                         │  without losing identity         │
                                                                                                                         │ ○ Keep every row inside the      │
                                                                                                                         │ sixteen-column floor             │
                                                                                                                         │ ✓ Preserve RightSidebar clipping │
                                                                                                                         │  ownership                       │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F5 details













                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > processList at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ⚡ PROCESSES
                                                             ─ 3/4          ─

                                                             ▶3
                                                             ▶ wrongstack-tu…
                                                             ▶ codebase-inde…
                                                             ▶ kanban-ipc-he…
                                                             ● idle-backgrou…
                                                             ╰──────────────╯

                                                             ◆ F8 details



















                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > processList at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ⚡ PROCESSES   ⟦3/4⟧ │
                                                                                           │ running                │
                                                                                           │                        │
                                                                                           │ ▶3                     │
                                                                                           │ ▶ wrongstack-t… 123456 │
                                                                                           │ ▶ codebase-ind… 234567 │
                                                                                           │ ▶ kanban-ipc-h… 345678 │
                                                                                           │ ● idle-backgro… 456789 │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F8 details



















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > processList at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ⚡ PROCESSES             ⟦3/4⟧ │
                                                                                                                         │ running                          │
                                                                                                                         │                                  │
                                                                                                                         │ ▶3                               │
                                                                                                                         │ ▶ wrongstack-tui-with-a-… 123456 │
                                                                                                                         │ ▶ codebase-index-worker-… 234567 │
                                                                                                                         │ ▶ kanban-ipc-heartbeat    345678 │
                                                                                                                         │ ● idle-background-observ… 456789 │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F8 details



















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > projectPicker at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ▣ PROJECT
                                                             ─ 2 projects   ─
                                                             ▎ ▣ CURRENT·····
                                                             WrongStack — …
                                                             ▎ ▣ CHOICES·····
                                                               ▣ WrongStac…
                                                              └─ D:/Codebox/…
                                                             ▎ ▣ 国際化-la…
                                                              └─ /workspace/…
                                                             ────────────────
                                                               ◆ Create a …
                                                              └─ Fresh conte…
                                                               ◆ Browse pr…
                                                              └─ Resume from…
                                                             ! Enter opens t…
                                                             ╰──────────────╯

                                                             ◆ ↑↓ select · E…












                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > projectPicker at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ▣ PROJE…⟦2 projects⟧ │
                                                                                           │ sidebar visual 한국…   │
                                                                                           │ ▎ ▣ CURRENT⟦4 choices⟧ │
                                                                                           │ WrongStack — termin…   │
                                                                                           │ ▎ ▣ CHOICES··········· │
                                                                                           │   ▣ WrongStack — te…   │
                                                                                           │  └─ D:/Codebox/PROJEC… │
                                                                                           │ ▎ ▣ 国際化-laborato…   │
                                                                                           │  └─ /workspace/한국어… │
                                                                                           │ ────────────────────── │
                                                                                           │   ◆ Create a new is…   │
                                                                                           │  └─ Fresh context and… │
                                                                                           │   ◆ Browse previous…   │
                                                                                           │  └─ Resume from durab… │
                                                                                           │ ! Enter opens the hig… │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ ↑↓ select · Enter open












                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > projectPicker at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ▣ PROJECT         ⟦2 projects⟧ │
                                                                                                                         │ sidebar visual 한국…             │
                                                                                                                         │ ▎ ▣ CURRENT··········⟦4 choices⟧ │
                                                                                                                         │ WrongStack — terminal orchest…   │
                                                                                                                         │ ▎ ▣ CHOICES····················· │
                                                                                                                         │   ▣ WrongStack — terminal orc…   │
                                                                                                                         │  └─ D:/Codebox/PROJECTS/WrongSt… │
                                                                                                                         │ ▎ ▣ 国際化-laboratory-with-a-…   │
                                                                                                                         │  └─ /workspace/한국어/日本語/🛰   │
                                                                                                                         │ ──────────────────────────────── │
                                                                                                                         │   ◆ Create a new isolated ses…   │
                                                                                                                         │  └─ Fresh context and worktree   │
                                                                                                                         │   ◆ Browse previous sessions     │
                                                                                                                         │  └─ Resume from durable history  │
                                                                                                                         │ ! Enter opens the highlighted p… │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ ↑↓ select · Enter open












                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > queue at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◴ QUEUE
                                                             ─ 3            ─
                                                             01 Explain why
                                                             the connection
                                                             topology changed
                                                              after
                                                             reconnecting
                                                             02 Review the
                                                             Unicode-width
                                                             behavior for
                                                             한국어 and 🛰
                                                             status glyphs
                                                             03 Run the
                                                             complete TUI
                                                             regression suite
                                                              after the
                                                             visual pass
                                                             ╰──────────────╯

                                                             ◆ F7 details










                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > queue at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◴ QUEUE          ⟦3⟧ │
                                                                                           │ queued prompts         │
                                                                                           │ 01 Explain why the     │
                                                                                           │ connection topology    │
                                                                                           │ changed after          │
                                                                                           │ reconnecting           │
                                                                                           │ 02 Review the          │
                                                                                           │ Unicode-width behavior │
                                                                                           │  for 한국어 and 🛰      │
                                                                                           │ status glyphs          │
                                                                                           │ 03 Run the complete    │
                                                                                           │ TUI regression suite   │
                                                                                           │ after the visual pass  │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F7 details














                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > queue at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◴ QUEUE                    ⟦3⟧ │
                                                                                                                         │ queued prompts                   │
                                                                                                                         │ 01 Explain why the connection    │
                                                                                                                         │ topology changed after           │
                                                                                                                         │ reconnecting                     │
                                                                                                                         │ 02 Review the Unicode-width      │
                                                                                                                         │ behavior for 한국어 and 🛰 status │
                                                                                                                         │  glyphs                          │
                                                                                                                         │ 03 Run the complete TUI          │
                                                                                                                         │ regression suite after the       │
                                                                                                                         │ visual pass                      │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F7 details
















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > sessions at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ⧉ SESSIONS
                                                             ─ 4            ─

                                                             ●2 ▰2
                                                             ▎ ⧉ LIVE·····⟦2⟧
                                                             ● WrongStack-ma…
                                                             ◉ international…
                                                             ▎ ▰ RESUME···⟦2⟧
                                                             ✓ Fix the narro…
                                                             ⏱ Unicode-width…
                                                             ╰──────────────╯

                                                             ◆ F10 details

















                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > sessions at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ⧉ SESSIONS       ⟦4⟧ │
                                                                                           │ live + resume          │
                                                                                           │                        │
                                                                                           │ ●2 ▰2                  │
                                                                                           │ ▎ ⧉ LIVE···········⟦2⟧ │
                                                                                           │ ● WrongStack-main…  3a │
                                                                                           │ ◉ internationaliz…  1a │
                                                                                           │ ▎ ▰ RESUME·········⟦2⟧ │
                                                                                           │ ✓ Fix the narrow-t… 1d │
                                                                                           │ ⏱ Unicode-width au… 2d │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F10 details

















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > sessions at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ⧉ SESSIONS                 ⟦4⟧ │
                                                                                                                         │ live + resume                    │
                                                                                                                         │                                  │
                                                                                                                         │ ●2 ▰2                            │
                                                                                                                         │ ▎ ⧉ LIVE·····················⟦2⟧ │
                                                                                                                         │ ● WrongStack-main-日本語      3a │
                                                                                                                         │ ◉ internationalization-labo…  1a │
                                                                                                                         │ ▎ ▰ RESUME···················⟦2⟧ │
                                                                                                                         │ ✓ Fix the narrow-terminal co… 1d │
                                                                                                                         │ ⏱ Unicode-width audit 한국어… 2d │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F10 details

















                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > todos at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ◎ TODOS
                                                             ─ 1/3          ─
                                                             █████░░░░░░░░░░░

                                                             ▶1 ○1 ✓1
                                                             ▶ Generating
                                                             thirty-nine
                                                             real-TTY sidebar
                                                              snapshots
                                                             across every
                                                             routed variant
                                                             ○ Inspect Korean
                                                              한국어,
                                                             Japanese 日本語,
                                                              and emoji 🛰
                                                             telemetry at the
                                                              narrow rail
                                                             ✓ Preserve the
                                                             existing sixteen
                                                              content-column
                                                             contract
                                                             ╰──────────────╯

                                                             ◆ F6 details






                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > todos at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ◎ TODOS        ⟦1/3⟧ │
                                                                                           │ mission queue          │
                                                                                           │ ███████░░░░░░░░░░░░░░░ │
                                                                                           │                        │
                                                                                           │ ▶1 ○1 ✓1               │
                                                                                           │ ▶ Generating           │
                                                                                           │ thirty-nine real-TTY   │
                                                                                           │ sidebar snapshots      │
                                                                                           │ across every routed    │
                                                                                           │ variant                │
                                                                                           │ ○ Inspect Korean       │
                                                                                           │ 한국어, Japanese       │
                                                                                           │ 日本語, and emoji 🛰    │
                                                                                           │ telemetry at the       │
                                                                                           │ narrow rail            │
                                                                                           │ ✓ Preserve the         │
                                                                                           │ existing sixteen       │
                                                                                           │ content-column         │
                                                                                           │ contract               │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F6 details








                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > todos at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ◎ TODOS                  ⟦1/3⟧ │
                                                                                                                         │ mission queue                    │
                                                                                                                         │ ███████████░░░░░░░░░░░░░░░░░░░░░ │
                                                                                                                         │                                  │
                                                                                                                         │ ▶1 ○1 ✓1                         │
                                                                                                                         │ ▶ Generating thirty-nine         │
                                                                                                                         │ real-TTY sidebar snapshots       │
                                                                                                                         │ across every routed variant      │
                                                                                                                         │ ○ Inspect Korean 한국어,         │
                                                                                                                         │ Japanese 日本語, and emoji 🛰     │
                                                                                                                         │ telemetry at the narrow rail     │
                                                                                                                         │ ✓ Preserve the existing sixteen  │
                                                                                                                         │ content-column contract          │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F6 details














                                                                                                                        ────────────────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > worktree at 80 columns 1`] = `
"                                                             ╭──────────────╮
                                                             ▌ ⎇ WORKTREES
                                                             ─ A1 D0 !1     ─

                                                             ▶1 ×1
                                                             • sidebar-visua…
                                                               └─ visual-rev…
                                                             ! 한국어-日本語…
                                                               └─ unicode-ve…
                                                             ╰──────────────╯

                                                             ◆ F4 details



















                                                            ────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > worktree at 120 columns 1`] = `
"                                                                                           ╭────────────────────────╮
                                                                                           │ ▌ ⎇ WORK…⟦1 act ✓0 !1⟧ │
                                                                                           │ isolation              │
                                                                                           │                        │
                                                                                           │ ▶1 ×1                  │
                                                                                           │ • sidebar-… +1284/-377 │
                                                                                           │   └─ visual-reviewer … │
                                                                                           │ ! 한국어-日本…  +84/-9 │
                                                                                           │   └─ unicode-verifier… │
                                                                                           ╰────────────────────────╯

                                                                                           ◆ F4 details



















                                                                                          ──────────────────────────────"
`;

exports[`routed sidebar variants — real-TTY visual matrix > worktree at 160 columns 1`] = `
"                                                                                                                         ╭──────────────────────────────────╮
                                                                                                                         │ ▌ ⎇ WORKTREES      ⟦1 act ✓0 !1⟧ │
                                                                                                                         │ isolation                        │
                                                                                                                         │                                  │
                                                                                                                         │ ▶1 ×1                            │
                                                                                                                         │ • sidebar-visual-pre… +1284/-377 │
                                                                                                                         │   └─ visual-reviewer · 29f · 10… │
                                                                                                                         │ ! 한국어-日本語-width-ve… +84/-9 │
                                                                                                                         │   └─ unicode-verifier · 6f · 5m… │
                                                                                                                         ╰──────────────────────────────────╯

                                                                                                                         ◆ F4 details



















                                                                                                                        ────────────────────────────────────────"
`;
